# goit-webeng-hw11-fastapi

./: .dockerignore  .gitignore  Dockerfile  alembic_init.txt  docker-compose.yaml  main.py  pyproject.toml  readme  requirements.txt
alembic/: env.py
alembic/versions/: 4eb9cb7d1bdf_initial_1.py  58dca433dd6e_models_py_creation.py  99b14cc140d9_add_users_table.py  9bcb01decbd2_new.py  dacf8e11c0dd_models_py_creation.py  f69f2ef98342_22.py
config/: cache.py  cloudinary_config.py  db.py  general.py
docs/source/: conf.py  index.rst
src/auth/: dependencies.py  mail_utils.py  models.py  repos.py  routers.py  schema.py  utils.py
src/contacts/: models.py  repos.py  routers.py  schema.py
src/templates/: reset_password_email.html  reset_password_form.html  verification_email.html
tests/: conftest.py  test_auth.py  test_health.py
